# libjit-hs

./: Libjit.hs  Makefile  README.md  README.org  libjit-hs.cabal
Libjit/: Context.hs  Function.hs  Jit.hs  Makefile  Raw.chs  Raw.hs
Libjit/cbits/src/: Makefile  extra.c  extra.h
examples/: Makefile  mul_add.hs
tests/: Makefile  call_native.hs  gcd.hs  mul_add.hs
